feat: add login api with jwt
